samples/_failures_safe/1761075031_cfe95f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85c0fea1.c: In function ‘main’:
./samples/SAFE/__tmp_85c0fea1.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
